# eco-swap-gateway

./: .gitignore  .gitmodules  README.md  cantina-findings.md
evm/: .env.example  .gitignore  foundry.toml  package-lock.json  package.json  remappings.txt
evm/contracts/: EcoSwapGateway.sol  SwapIntent.sol
evm/contracts/interfaces/: IEcoSwapGateway.sol  ISwapIntent.sol
evm/script/: DeployEcoSwapGateway.s.sol  DeployEcoSwapGatewayCreateX.s.sol  DeploySwapIntent.s.sol  DeploySwapIntentCreateX.s.sol  chaindata.json  deployEcoSwapGateway.sh  deploySwapIntent.sh  swapAndCreateIntent.ts  swapAndCreateIntent_BNB_ETH.ts  swapAndSelectIntent.ts  swapAndSelectIntent_BNB_ETH.ts  verifyEcoSwapGateway.sh  verifySwapIntent.sh
evm/script/abi/: ecoSwapGateway.ts  portal.ts  swapIntent.ts  wbnb.ts
evm/test/: EcoSwapGateway.t.sol  SwapIntent.t.sol
evm/test/mocks/: MockDEX.sol
svm/: Anchor.toml  Cargo.toml  DESIGN.md  Swapjrqw3Va4Pp4JMZLvNQuTG7rJgUBjcnZqPFZAJDf.json
svm/integration-tests/: Cargo.toml
svm/integration-tests/src/: lib.rs
svm/integration-tests/tests/: close_and_select.rs  close_and_select_native.rs  hash_parity.rs  swap_intent.rs
svm/integration-tests/tests/common/: mod.rs
svm/programs/eco-swap-gateway/: Cargo.toml
svm/programs/eco-swap-gateway/programs/eco-swap-gateway/src/state/testdata/: snapshot_pda_deterministic.golden
svm/programs/eco-swap-gateway/src/: errors.rs  events.rs  lib.rs  mint_safety.rs  state.rs  types.rs
svm/programs/eco-swap-gateway/src/instructions/: close_and_select_intent.rs  close_and_select_intent_native.rs  mod.rs  open.rs  shared.rs
svm/programs/eco-swap-gateway/src/state/testdata/: snapshot_pda_deterministic.golden
svm/programs/intent-publisher/: Cargo.toml
svm/programs/intent-publisher/src/: events.rs  lib.rs  state.rs
svm/programs/intent-publisher/src/instructions/: close_route_buffer.rs  create_intent.rs  mod.rs  write_route_buffer.rs
svm/programs/intent-publisher/src/testdata/: route_buffer_pda_deterministic.golden
svm/programs/swap-intent/: Cargo.toml
svm/programs/swap-intent/src/: constants.rs  events.rs  lib.rs  state.rs
svm/programs/swap-intent/src/cpi/: fund.rs  mod.rs  publish.rs
svm/programs/swap-intent/src/instructions/: cancel.rs  close_and_create.rs  close_route_buffer.rs  create_intent.rs  mod.rs  open.rs  write_route_buffer.rs
svm/programs/swap-intent/src/testdata/: route_buffer_pda_deterministic.golden  swap_state_pda_deterministic.golden
svm/script/: .env.example  package-lock.json  package.json
svm/script/src/: bucketedSwap.ts  common.ts  hashParity.test.ts  nativeBucketedSwap.ts  swapAndCreateIntent.ts
svm/script/src/abi/: quoterV2.ts  uniswapV3Router.ts
svm/script/src/bucketed-swap/: buckets.ts  config.ts  logging.ts  types.ts
svm/script/src/bucketed-swap/destination/: fulfill.ts  uniswap.ts
svm/script/src/bucketed-swap/source/: flash-fulfill.ts  intent-selected.ts  jupiter.ts  local-intent.ts  native-flash-fulfill.ts  native-input.ts  native-local-intent.ts  publish-winning.ts  withdraw.ts
svm/script/src/bucketed-swap/util/: hex.ts  lookup-table.ts  tx.ts
