[workspace]
members = ["integration-tests", "programs/*"]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
derive-new = "0.7.0"
eco-svm-std = { git = "ssh://git@github.com/eco/eco-routes-svm.git", rev = "872c621" }
goldie = "0.6.0"
portal = { git = "ssh://git@github.com/eco/eco-routes-svm.git", rev = "872c621", features = ["no-entrypoint"] }
intent-publisher = { path = "programs/intent-publisher" }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
