[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
base64 = "0.22"
eco-svm-std = { workspace = true }
eco-swap-gateway = { workspace = true, features = ["no-entrypoint"] }
litesvm = "0.6.1"
portal = { workspace = true }
solana-sdk = "2.2.1"
tiny-keccak = { workspace = true }
