[package]
name = "intent-publisher"
version = "0.1.0"
description = "Publish-and-fund helper for Portal intent creation"
edition = "2021"
rust-version = "1.84.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "intent_publisher"

[features]
mainnet = ["portal/mainnet"]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
derive-new = { workspace = true }
eco-svm-std = { workspace = true }
portal = { workspace = true }
tiny-keccak = { workspace = true }

[dev-dependencies]
goldie = { workspace = true }
